--- a/_assets/scss/_footer.scss
+++ b/_assets/scss/_footer.scss
@@ -178,8 +178,8 @@
     transition: 1s;
     position: relative;
     bottom: 0px;
-    width: 3em;
-    height: 3em;
+    //width: 2.3em;
+    //height: 2.3em;
   }
 
   /* Hover Effects */
@@ -269,21 +269,21 @@
     line-height: 37px;
     list-style-type: none;
     text-align: left;
-  }
 
-  ul {
-    margin: 0;
-    list-style-type: none;
-  }
+    ul {
+      margin: 0;
+      list-style-type: none;
+    }
 
-  li {
-    margin: 0;
-    color: #666666;
-    font-size: 16px;
-    font-weight: 300;
-    line-height: 22px;
-    list-style-type: none;
-    text-align: left;
+    li {
+      margin: 0;
+      color: #666666;
+      font-size: 16px;
+      font-weight: 300;
+      line-height: 22px;
+      list-style-type: none;
+      text-align: left;
+    }
   }
 
   /* Utility Links Div Styling */
@@ -326,14 +326,14 @@
   a:link {
     color: #000;
     text-decoration: none;
-
+    font-size: 1em;
     font-weight: 500;
   }
 
   a:visited {
     color: #000;
     text-decoration: none;
-
+    font-size: 1em;
     font-weight: 500;
   }
 
@@ -419,8 +419,8 @@
     transition: 1s;
     position: relative;
     bottom: 0px;
-    width: 4em;
-    height: 3.7em;
+    //width: 2em;
+    //height: 2.3em;
   }
 
   /* Hover Effects */
@@ -452,23 +452,23 @@
     bottom: 20px;
   }
 
-  .pin:hover {
-    border-color: rgba(214, 69, 69, 0.77);
-    transition: 0.75s;
-    background-color: rgba(234, 11, 11, 0.27);
-    box-shadow: 5px 5px 5px rgba(214, 69, 69, 0.77);
-    position: relative;
-    bottom: 20px;
-  }
+  //.pin:hover {
+  //  border-color: rgba(214, 69, 69, 0.77);
+  //  transition: 0.75s;
+  //  background-color: rgba(234, 11, 11, 0.27);
+  //  box-shadow: 5px 5px 5px rgba(214, 69, 69, 0.77);
+  //  position: relative;
+  //  bottom: 20px;
+  //}
 
-  .google:hover {
-    border-color: rgb(0, 0, 0);
-    transition: 0.75s;
-    background-color: rgba(37, 36, 36, 0.45);
-    box-shadow: 5px 5px 5px rgb(59, 54, 54);
-    position: relative;
-    bottom: 20px;
-  }
+  //.google:hover {
+  //  border-color: rgba(139, 69, 19, 0.74);
+  //  transition: 0.75s;
+  //  background-color: rgba(214, 172, 143, 0.79);
+  //  box-shadow: 5px 5px 5px rgb(59, 54, 54);
+  //  position: relative;
+  //  bottom: 20px;
+  //}
   .my-number {
     color: black;
     font-size: 1.1em;
@@ -567,7 +567,7 @@
     display: flex;
     justify-content: flex-start;
     width: 90%;
-    margin-left: -2em;
+    margin-left: -22em;
   }
 
   /* Help Styling */
@@ -750,7 +750,7 @@
   .site-footer p {
     padding-top: 0em;
     text-align: center;
-    top: 12em;
+    top: 18em;
     position: relative;
     left: -2em;
 
@@ -815,7 +815,7 @@
   //}
 
   .help {
-    width: 100%;
+    width: 89%;
     height: auto;
   }
   .section {
@@ -1052,6 +1052,7 @@
     padding-left: 3em;
     position: absolute;
     list-style-type: none;
+    padding-top: 2em;
   }
 
   /* Utility Links Div Styling */
@@ -1059,12 +1060,13 @@
   #utility-links {
     width: 90%;
     height: 150px;
-    background-color: #fff;
+
     //margin-top: -14em;
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    padding-bottom: 2em;
   }
 
   /* Help Styling */
@@ -1079,13 +1081,21 @@
     margin: 1em;
     /*display: inline-block;*/
   }
+  .section {
+    margin-top: 0em;
+    position: relative;
+    left: 10em;
 
-  //.social {
-  //  margin-left: 22em;
-  //}
-
-  /* Help Img Icons*/
-
+    img {
+      border: 2px solid rgba(158, 158, 158, 0.4);
+      border-radius: 50px;
+      padding: 25px;
+    }
+  }
+  .help-img-icon {
+    float: left;
+    margin: 0 5px 0 0;
+  }
   .help-img-icon img {
     border-radius: 50px;
     padding: -7px;
@@ -1101,6 +1111,8 @@
     line-height: 0;
     text-align: center;
   }
+
+  /* Link Styling */
 
   /* Link Styling */
 
@@ -1131,52 +1143,128 @@
 
     font-weight: 500;
   }
-  .my-number {
-    width: 100%;
+  .social {
+    display: flex;
+    padding-top: 2em;
   }
-  .my-number a {
-    width: 60%;
-    font-size: 1.5em;
-    margin-left: 15em;
+
+  h5 {
+    text-align: center;
+    font-family: monospace;
+  }
+
+  h5:before {
+    display: inline-block;
+    margin: 0px 20px 5px 0px;
+    height: 3px;
+    content: " ";
+    text-shadow: none;
+    background-color: #999;
+    width: 140px;
+  }
+
+  h5:after {
+    content: " ";
+    display: inline-block;
+    width: 140px;
+    height: 3px;
+    background-color: #999;
+    margin: 0px 0px 5px 20px;
+  }
+
+  .fb {
+    margin-right: -20px;
+    transition: 1s;
+    position: relative;
+    bottom: 0px;
+  }
+
+  .twitter {
+    margin-right: -20px;
+    transition: 1s;
+    position: relative;
+    bottom: 0px;
+  }
+
+  .insta {
+    margin-right: -20px;
+    transition: 1s;
+    position: relative;
+    bottom: 0px;
+  }
+
+  .pin {
+    margin-right: -20px;
+    transition: 1s;
+    position: relative;
+    bottom: 0px;
+  }
+
+  .google {
+    transition: 1s;
+    position: relative;
+    bottom: 0px;
+  }
+
+  /* Hover Effects */
+
+  .fb:hover {
+    border-color: rgba(16, 16, 146, 0.57);
+    transition: 1s;
+    background-color: rgba(80, 80, 202, 0.27);
+    box-shadow: 5px 5px 5px rgba(16, 16, 146, 0.57);
+    position: relative;
+    bottom: 20px;
+  }
+
+  .twitter:hover {
+    border-color: #84bad0;
+    transition: 0.75s;
+    background-color: rgba(132, 186, 208, 0.17);
+    box-shadow: 5px 5px 5px #84bad0;
+    position: relative;
+    bottom: 20px;
+  }
+
+  .insta:hover {
+    border-color: rgba(139, 69, 19, 0.74);
+    transition: 0.75s;
+    background-color: rgba(214, 172, 143, 0.79);
+    box-shadow: 5px 5px 5px rgba(139, 69, 19, 0.74);
+    position: relative;
+    bottom: 20px;
+  }
+
+  .pin:hover {
+    border-color: rgba(214, 69, 69, 0.77);
+    transition: 0.75s;
+    background-color: rgba(234, 11, 11, 0.27);
+    box-shadow: 5px 5px 5px rgba(214, 69, 69, 0.77);
+    position: relative;
+    bottom: 20px;
+  }
+
+  .google:hover {
+    border-color: rgb(220, 6, 6);
+    transition: 0.75s;
+    background-color: rgba(4, 28, 238, 0.45);
+    box-shadow: 5px 5px 5px rgba(29, 61, 39, 0.753);
+    position: relative;
+    bottom: 20px;
+  }
+  .site-footer p {
+    text-align: center;
+    position: relative;
+    top: 12em;
+    padding-top: 2em;
+    padding-left: -3em;
+    left: -6em;
   }
 }
 
 /* MOBILE */
 
 @media all and (max-width: 599px) and (min-width: 100px) {
-  /* Footer Parent Div Styling */
-
-  /* H3 Styling */
-
-  //h3.left {
-
-  //  color: #000;
-  //  font-size: 28px;
-
-  //  text-align: center;
-  //  font-weight: bold;
-  //  margin: 0 0 10px 0;
-
-  //}
-
-  //h3.center {
-
-  //  color: #000;
-  //  font-size: 16px;
-
-  //  font-weight: bold;
-  //  margin: 0 0 10px 0;
-  //  text-align: center;
-
-  //}
-
-  /* List Styling */
-
-  /*ul {
-      margin: 0;
-      list-style-type: none;
-  }*/
-
   li {
     margin: 0;
     color: #666666;
@@ -1189,31 +1277,6 @@
     text-align: center;
   }
 
-  /* Utility Links Div Styling */
-
-  //#utility-links {
-
-  //  width: 90%;
-  //  height: 150px;
-  //  padding-top: 3em;
-  //  margin: 40px auto 0 auto;
-  //  text-align: center;
-
-  //}
-  //  @supports (-moz-appearance:none) {
-  //    .section {
-  //      background-color: red;
-  //      margin-left: 0em;
-  //    }
-
-  //    .social {
-  //      background-color: yellow;
-  //      padding-top: 5em;
-  //      width: 31em;
-  //      display: flex;
-  //  }
-
-  //}
   .mailBG {
     padding-bottom: 2em;
   }
@@ -1239,15 +1302,6 @@
     font-size: 1.3em;
   }
 
-  //.social {
-  //  width: 48em;
-  //  padding-top: 5em;
-  //}
-  //.site-footer p {
-  //  padding-top: 29em;
-  //  margin-right: 21em;
-  //  padding-bottom: 1em;
-  //}
   p.deals {
     font-size: 13px;
 
